@@ -8,16 +8,16 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.temporal.ChronoUnit;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 /**
- * Evaluates constraint violations for roster plans and assignments
- * Acts as a bridge between optimization algorithms and existing constraint services
+ * Enhanced constraint evaluator with performance optimizations and better maintainability
  */
 @Component
 @RequiredArgsConstructor
@@ -26,383 +26,233 @@ public class ConstraintEvaluator {
 
     private final ConstraintService constraintService;
 
-    // Cache for constraints to avoid repeated database queries - static to ensure singleton
-    private static Map<String, String> globalConstraintsCache = null;
+    // Performance cache
+    private final Map<String, String> constraintCache = new ConcurrentHashMap<>();
+    private volatile boolean cacheInitialized = false;
 
     /**
-     * Evaluate all constraints for a complete roster plan
+     * Main evaluation method with early termination support
      */
     public ConstraintEvaluationResult evaluateRosterPlan(RosterPlan rosterPlan) {
+        return evaluateRosterPlan(rosterPlan, false);
+    }
+
+    /**
+     * Evaluation with early termination option for performance
+     */
+    public ConstraintEvaluationResult evaluateRosterPlan(RosterPlan rosterPlan, boolean earlyTermination) {
         log.debug("Evaluating constraints for roster plan: {}", rosterPlan.getPlanId());
 
         ConstraintEvaluationResult result = new ConstraintEvaluationResult();
+        initializeConstraintCacheIfNeeded();
 
-        // Initialize constraint cache once per evaluation
-        initializeConstraintCache();
-
-        // Group assignments by staff ID to avoid hashCode issues with Hibernate proxies
-        Map<Long, List<Assignment>> assignmentsByStaffId = rosterPlan.getAssignments().stream()
+        // Group assignments by staff for efficient processing
+        Map<Long, List<Assignment>> staffAssignments = rosterPlan.getAssignments().stream()
                 .collect(Collectors.groupingBy(assignment -> assignment.getStaff().getId()));
 
-        // Evaluate constraints for each staff member
-        for (Map.Entry<Long, List<Assignment>> entry : assignmentsByStaffId.entrySet()) {
-            List<Assignment> staffAssignments = entry.getValue();
-            
-            // Get staff from first assignment (all assignments have same staff)
-            Staff staff = staffAssignments.get(0).getStaff();
+        // Evaluate staff constraints with early termination
+        for (Map.Entry<Long, List<Assignment>> entry : staffAssignments.entrySet()) {
+            List<Assignment> assignments = entry.getValue();
+            Staff staff = assignments.get(0).getStaff();
 
-            evaluateStaffConstraints(staff, staffAssignments, result);
+            evaluateStaffConstraints(staff, assignments, result);
+
+            // Early termination if too many hard violations
+            if (earlyTermination && result.getHardViolationCount() > 50) {
+                log.debug("Early termination triggered at {} hard violations", result.getHardViolationCount());
+                return result;
+            }
         }
 
-        // Evaluate global constraints
+        // Global constraints evaluation
         evaluateGlobalConstraints(rosterPlan, result);
 
-        log.debug("Constraint evaluation completed. Hard violations: {}, Soft violations: {}",
+        log.debug("Constraint evaluation completed. Hard: {}, Soft: {}",
                 result.getHardViolationCount(), result.getSoftViolationCount());
 
         return result;
     }
 
     /**
-     * Clear constraint cache (useful for long-running optimization processes)
-     */
-    public void clearConstraintCache() {
-        globalConstraintsCache = null;
-        log.debug("Constraint cache cleared");
-    }
-
-    /**
-     * Evaluate constraints for a single staff member's assignments
+     * Staff-level constraint evaluation
      */
     private void evaluateStaffConstraints(Staff staff, List<Assignment> assignments,
                                           ConstraintEvaluationResult result) {
 
-        // Get effective constraint values for this staff (considering overrides)
-        Map<String, String> effectiveConstraints = getEffectiveConstraintsForStaff(staff);
+        Map<String, String> effectiveConstraints = getEffectiveConstraints(staff);
 
-        // Max working hours per day
-        evaluateMaxWorkingHoursPerDay(staff, assignments, effectiveConstraints, result);
-
-        // Max working hours per week
-        evaluateMaxWorkingHoursPerWeek(staff, assignments, effectiveConstraints, result);
-
-        // Max working hours per month
-        evaluateMaxWorkingHoursPerMonth(staff, assignments, effectiveConstraints, result);
-
-        // Minimum day off constraints
-        evaluateMinimumDayOff(staff, assignments, effectiveConstraints, result);
-
-        // Time between shifts
-        evaluateTimeBetweenShifts(staff, assignments, effectiveConstraints, result);
-
-        // Night shift constraints
-        evaluateNightShiftConstraints(staff, assignments, effectiveConstraints, result);
-
-        // Split shifts constraint
-        evaluateSplitShiftsConstraint(staff, assignments, effectiveConstraints, result);
-
-        // Working pattern compliance (soft constraint)
-        evaluateWorkingPatternCompliance(staff, assignments, effectiveConstraints, result);
-
-        // Qualification match (hard constraint)
-        evaluateQualificationMatch(staff, assignments, result);
-
-        // Day off rules compliance
-        evaluateDayOffRules(staff, assignments, result);
+        // Core constraint checks
+        checkWorkingHourLimits(staff, assignments, effectiveConstraints, result);
+        checkRestPeriods(staff, assignments, effectiveConstraints, result);
+        checkWorkingPatterns(staff, assignments, effectiveConstraints, result);
+        checkQualificationMatch(staff, assignments, result);
+        checkDayOffRules(staff, assignments, result);
     }
 
     /**
-     * Evaluate global/cross-staff constraints
+     * Working hours constraints (daily, weekly, monthly)
      */
-    private void evaluateGlobalConstraints(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
+    private void checkWorkingHourLimits(Staff staff, List<Assignment> assignments,
+                                        Map<String, String> constraints, ConstraintEvaluationResult result) {
 
-        // Task coverage enforcement
-        evaluateTaskCoverage(rosterPlan, result);
+        double maxDaily = parseDoubleConstraint(constraints, "MaxWorkingHoursPerDay", 12.0);
+        double maxWeekly = parseDoubleConstraint(constraints, "MaxWorkingHoursPerWeek", 40.0);
+        double maxMonthly = parseDoubleConstraint(constraints, "MaxWorkingHoursPerMonth", 160.0);
 
-        // Overlapping assignments
-        evaluateOverlappingAssignments(rosterPlan, result);
-
-        // Department match
-        evaluateDepartmentMatch(rosterPlan, result);
-
-        // Fairness (soft constraint)
-        evaluateFairness(rosterPlan, result);
-    }
-
-    /**
-     * Max working hours per day constraint
-     */
-    private void evaluateMaxWorkingHoursPerDay(Staff staff, List<Assignment> assignments,
-                                               Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        double maxHours = Double.parseDouble(constraints.getOrDefault("MaxWorkingHoursPerDay", "12"));
-
+        // Daily hours check
         Map<LocalDate, Double> dailyHours = assignments.stream()
-                .collect(Collectors.groupingBy(
-                        Assignment::getDate,
-                        Collectors.summingDouble(Assignment::getDurationHours)
-                ));
+                .collect(Collectors.groupingBy(Assignment::getDate,
+                        Collectors.summingDouble(Assignment::getDurationHours)));
 
-        for (Map.Entry<LocalDate, Double> entry : dailyHours.entrySet()) {
-            if (entry.getValue() > maxHours) {
-                result.addHardViolation(String.format("Staff %s exceeds max daily hours (%.1f > %.1f) on %s",
-                        staff.getName() + " " + staff.getSurname(), entry.getValue(), maxHours, entry.getKey()));
-            }
-        }
-    }
+        dailyHours.entrySet().stream()
+                .filter(entry -> entry.getValue() > maxDaily)
+                .forEach(entry -> result.addHardViolation(
+                        String.format("Staff %s exceeds max daily hours (%.1f > %.1f) on %s",
+                                getStaffName(staff), entry.getValue(), maxDaily, entry.getKey())));
 
-    /**
-     * Max working hours per week constraint
-     */
-    private void evaluateMaxWorkingHoursPerWeek(Staff staff, List<Assignment> assignments,
-                                                Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        double maxHours = Double.parseDouble(constraints.getOrDefault("MaxWorkingHoursPerWeek", "40"));
-
-        // Group by week and calculate total hours
+        // Weekly hours check
         Map<Integer, Double> weeklyHours = assignments.stream()
                 .collect(Collectors.groupingBy(
                         assignment -> assignment.getDate().get(java.time.temporal.WeekFields.ISO.weekOfYear()),
-                        Collectors.summingDouble(Assignment::getDurationHours)
-                ));
+                        Collectors.summingDouble(Assignment::getDurationHours)));
 
-        for (Map.Entry<Integer, Double> entry : weeklyHours.entrySet()) {
-            if (entry.getValue() > maxHours) {
-                result.addHardViolation(String.format("Staff %s exceeds max weekly hours (%.1f > %.1f) in week %d",
-                        staff.getName() + " " + staff.getSurname(), entry.getValue(), maxHours, entry.getKey()));
-            }
-        }
-    }
+        weeklyHours.entrySet().stream()
+                .filter(entry -> entry.getValue() > maxWeekly)
+                .forEach(entry -> result.addHardViolation(
+                        String.format("Staff %s exceeds max weekly hours (%.1f > %.1f) in week %d",
+                                getStaffName(staff), entry.getValue(), maxWeekly, entry.getKey())));
 
-    /**
-     * Max working hours per month constraint
-     */
-    private void evaluateMaxWorkingHoursPerMonth(Staff staff, List<Assignment> assignments,
-                                                 Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        double maxHours = Double.parseDouble(constraints.getOrDefault("MaxWorkingHoursPerMonth", "160"));
-
-        // Group by month and calculate total hours
+        // Monthly hours check
         Map<String, Double> monthlyHours = assignments.stream()
                 .collect(Collectors.groupingBy(
                         assignment -> assignment.getDate().getYear() + "-" + assignment.getDate().getMonthValue(),
-                        Collectors.summingDouble(Assignment::getDurationHours)
-                ));
+                        Collectors.summingDouble(Assignment::getDurationHours)));
 
-        for (Map.Entry<String, Double> entry : monthlyHours.entrySet()) {
-            if (entry.getValue() > maxHours) {
-                result.addHardViolation(String.format("Staff %s exceeds max monthly hours (%.1f > %.1f) in %s",
-                        staff.getName() + " " + staff.getSurname(), entry.getValue(), maxHours, entry.getKey()));
-            }
-        }
+        monthlyHours.entrySet().stream()
+                .filter(entry -> entry.getValue() > maxMonthly)
+                .forEach(entry -> result.addHardViolation(
+                        String.format("Staff %s exceeds max monthly hours (%.1f > %.1f) in %s",
+                                getStaffName(staff), entry.getValue(), maxMonthly, entry.getKey())));
     }
 
     /**
-     * Time between shifts constraint
+     * Rest period constraints
      */
-    private void evaluateTimeBetweenShifts(Staff staff, List<Assignment> assignments,
-                                           Map<String, String> constraints, ConstraintEvaluationResult result) {
+    private void checkRestPeriods(Staff staff, List<Assignment> assignments,
+                                  Map<String, String> constraints, ConstraintEvaluationResult result) {
 
-        int minHoursBetween = Integer.parseInt(constraints.getOrDefault("TimeBetweenShifts", "8"));
+        int minRestHours = parseIntConstraint(constraints, "TimeBetweenShifts", 8);
+        boolean nightShiftsAllowed = parseBooleanConstraint(constraints, "NightShiftsAllowed", true);
+        boolean splitShiftsAllowed = parseBooleanConstraint(constraints, "SplitShiftsAllowed", false);
+        int minDayOffPerWeek = parseIntConstraint(constraints, "MinimumDayOff", 2);
 
-        // Sort assignments by date and time
+        // Sort assignments chronologically
         List<Assignment> sortedAssignments = assignments.stream()
-                .sorted((a1, a2) -> {
-                    int dateCompare = a1.getDate().compareTo(a2.getDate());
-                    if (dateCompare != 0) return dateCompare;
-                    return a1.getShift().getStartTime().compareTo(a2.getShift().getStartTime());
-                })
-                .toList();
+                .sorted(Comparator.comparing(Assignment::getDate)
+                        .thenComparing(a -> a.getShift().getStartTime()))
+                .collect(Collectors.toList());
 
+        // Check rest between shifts
         for (int i = 0; i < sortedAssignments.size() - 1; i++) {
             Assignment current = sortedAssignments.get(i);
             Assignment next = sortedAssignments.get(i + 1);
 
             long hoursBetween = calculateHoursBetweenShifts(current, next);
-
-            if (hoursBetween < minHoursBetween) {
-                result.addHardViolation(String.format("Staff %s has insufficient rest between shifts (%.1f < %d hours)",
-                        staff.getName() + " " + staff.getSurname(), (double) hoursBetween, minHoursBetween));
+            if (hoursBetween < minRestHours) {
+                result.addHardViolation(String.format(
+                        "Staff %s has insufficient rest between shifts (%.1f < %d hours) on %s-%s",
+                        getStaffName(staff), (double) hoursBetween, minRestHours,
+                        current.getDate(), next.getDate()));
             }
         }
-    }
 
-    /**
-     * Qualification match constraint
-     */
-    private void evaluateQualificationMatch(Staff staff, List<Assignment> assignments,
-                                            ConstraintEvaluationResult result) {
-
-        for (Assignment assignment : assignments) {
-            if (assignment.hasTask()) {
-                Task task = assignment.getTask();
-
-                // Check if staff has all required qualifications for the task
-                boolean hasAllQualifications = task.getRequiredQualifications().stream()
-                        .allMatch(required -> staff.getQualifications().contains(required));
-
-                if (!hasAllQualifications) {
-                    result.addHardViolation(String.format("Staff %s lacks required qualifications for task %s",
-                            staff.getName() + " " + staff.getSurname(), task.getName()));
-                }
-            }
+        // Check night shift constraints
+        if (!nightShiftsAllowed) {
+            assignments.stream()
+                    .filter(a -> a.getShift().getIsNightShift())
+                    .forEach(a -> result.addHardViolation(String.format(
+                            "Staff %s assigned to night shift but night shifts not allowed on %s",
+                            getStaffName(staff), a.getDate())));
         }
+
+        // Check split shifts
+        if (!splitShiftsAllowed) {
+            Map<LocalDate, Long> dailyShiftCount = assignments.stream()
+                    .collect(Collectors.groupingBy(Assignment::getDate, Collectors.counting()));
+
+            dailyShiftCount.entrySet().stream()
+                    .filter(entry -> entry.getValue() > 1)
+                    .forEach(entry -> result.addHardViolation(String.format(
+                            "Staff %s has multiple shifts on %s but split shifts not allowed",
+                            getStaffName(staff), entry.getKey())));
+        }
+
+        // Check minimum day off
+        Map<Integer, List<LocalDate>> weeklyWorkDays = assignments.stream()
+                .collect(Collectors.groupingBy(
+                        assignment -> assignment.getDate().get(java.time.temporal.WeekFields.ISO.weekOfYear()),
+                        Collectors.mapping(Assignment::getDate, Collectors.toList())));
+
+        weeklyWorkDays.entrySet().stream()
+                .filter(entry -> (7 - entry.getValue().stream().collect(Collectors.toSet()).size()) < minDayOffPerWeek)
+                .forEach(entry -> result.addHardViolation(String.format(
+                        "Staff %s has insufficient day offs in week %d (required: %d)",
+                        getStaffName(staff), entry.getKey(), minDayOffPerWeek)));
     }
 
     /**
      * Working pattern compliance (soft constraint)
      */
-    private void evaluateWorkingPatternCompliance(Staff staff, List<Assignment> assignments,
-                                                  Map<String, String> constraints, ConstraintEvaluationResult result) {
+    private void checkWorkingPatterns(Staff staff, List<Assignment> assignments,
+                                      Map<String, String> constraints, ConstraintEvaluationResult result) {
 
-        boolean complianceEnabled = Boolean.parseBoolean(constraints.getOrDefault("WorkingPatternCompliance", "true"));
+        if (!parseBooleanConstraint(constraints, "WorkingPatternCompliance", true)) return;
 
-        if (!complianceEnabled) return;
+        Squad squad = staff.getSquad();
+        if (squad == null || squad.getSquadWorkingPattern() == null) return;
 
-        try {
-            Squad squad = staff.getSquad();
-            if (squad == null) {
-                log.debug("Staff has no squad assigned");
-                return;
+        String patternStr = squad.getSquadWorkingPattern().getShiftPattern();
+        if (patternStr == null || patternStr.isBlank()) return;
+
+        String[] patternElements = patternStr.toUpperCase().split(",");
+        LocalDate anchorDate = Optional.ofNullable(squad.getStartDate())
+                .orElse(assignments.get(0).getDate());
+
+        int mismatches = 0;
+        for (Assignment assignment : assignments) {
+            long dayIndex = ChronoUnit.DAYS.between(anchorDate, assignment.getDate());
+            if (dayIndex < 0) continue;
+
+            String expectedPattern = patternElements[(int) (dayIndex % patternElements.length)].trim();
+            if (!isPatternMatch(assignment, expectedPattern)) {
+                mismatches++;
             }
-            
-            // Check if squad working pattern is available (should be eagerly fetched now)
-            if (squad.getSquadWorkingPattern() == null) {
-                log.debug("Squad has no working pattern assigned");
-                return;
-            }
+        }
 
-            // TODO: Implement working pattern compliance logic
-            // This would check if staff assignments match their squad's working pattern
-
-            log.debug("Working pattern compliance evaluation not fully implemented yet");
-        } catch (Exception e) {
-            log.warn("Error evaluating working pattern compliance for staff {}: {}", 
-                     staff.getId(), e.getMessage());
-            // Continue processing without failing the entire evaluation
+        if (mismatches > 0) {
+            result.addSoftViolation(String.format(
+                    "Staff %s has %d working pattern mismatches",
+                    getStaffName(staff), mismatches));
         }
     }
 
     /**
-     * Get effective constraint values for staff (considering overrides)
+     * Qualification matching (hard constraint)
      */
-    /**
-     * Initialize constraint cache to avoid repeated database queries
-     */
-    private void initializeConstraintCache() {
-        if (globalConstraintsCache == null) {
-            log.debug("Initializing constraint cache");
-            globalConstraintsCache = constraintService.findAll().stream()
-                    .collect(Collectors.toMap(
-                            constraint -> constraint.getName(),
-                            constraint -> constraint.getDefaultValue()
-                    ));
-            log.debug("Constraint cache initialized with {} constraints", globalConstraintsCache.size());
-        }
-    }
-
-    private Map<String, String> getEffectiveConstraintsForStaff(Staff staff) {
-        // Use cached global constraints
-        Map<String, String> effectiveConstraints = new java.util.HashMap<>(globalConstraintsCache);
-
-        // Apply staff-specific overrides - only if staff has constraint overrides
-        if (staff.getConstraintOverrides() != null && !staff.getConstraintOverrides().isEmpty()) {
-            staff.getConstraintOverrides().stream()
-                    .filter(override -> override.getConstraint() != null && override.getActive())
-                    .forEach(override -> effectiveConstraints.put(
-                            override.getConstraint().getName(),
-                            override.getOverrideValue()
-                    ));
-        }
-
-        return effectiveConstraints;
-    }
-
-    /**
-     * Calculate hours between two consecutive shifts
-     */
-    private long calculateHoursBetweenShifts(Assignment current, Assignment next) {
-        LocalTime currentEnd = current.getShift().getEndTime();
-        LocalTime nextStart = next.getShift().getStartTime();
-
-        // If assignments are on the same day
-        if (current.getDate().equals(next.getDate())) {
-            return ChronoUnit.HOURS.between(currentEnd, nextStart);
-        }
-
-        // If assignments are on consecutive days
-        if (current.getDate().plusDays(1).equals(next.getDate())) {
-            // Calculate hours from current end time to midnight, then from midnight to next start
-            long hoursToMidnight = ChronoUnit.HOURS.between(currentEnd, LocalTime.MIDNIGHT);
-            long hoursFromMidnight = ChronoUnit.HOURS.between(LocalTime.MIDNIGHT, nextStart);
-            return hoursToMidnight + hoursFromMidnight;
-        }
-
-        // If there are days between assignments, there's enough rest time
-        return 24; // Return a value greater than typical minimum rest time
-    }
-
-    /**
-     * Night shift constraints
-     */
-    private void evaluateNightShiftConstraints(Staff staff, List<Assignment> assignments,
-                                               Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        boolean nightShiftsAllowed = Boolean.parseBoolean(constraints.getOrDefault("NightShiftsAllowed", "true"));
-
-        if (nightShiftsAllowed) return;
+    private void checkQualificationMatch(Staff staff, List<Assignment> assignments,
+                                         ConstraintEvaluationResult result) {
 
         for (Assignment assignment : assignments) {
-            if (assignment.getShift().getIsNightShift()) {
-                result.addHardViolation(String.format("Staff %s assigned to night shift but night shifts not allowed",
-                        staff.getName() + " " + staff.getSurname()));
-            }
-        }
-    }
+            if (assignment.hasTask()) {
+                Task task = assignment.getTask();
+                boolean hasAllQualifications = task.getRequiredQualifications().stream()
+                        .allMatch(required -> staff.getQualifications().contains(required));
 
-    /**
-     * Split shifts constraint (multiple shifts on same day)
-     */
-    private void evaluateSplitShiftsConstraint(Staff staff, List<Assignment> assignments,
-                                               Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        boolean splitShiftsAllowed = Boolean.parseBoolean(constraints.getOrDefault("SplitShiftsAllowed", "false"));
-
-        if (splitShiftsAllowed) return;
-
-        Map<LocalDate, Long> shiftsPerDay = assignments.stream()
-                .collect(Collectors.groupingBy(Assignment::getDate, Collectors.counting()));
-
-        for (Map.Entry<LocalDate, Long> entry : shiftsPerDay.entrySet()) {
-            if (entry.getValue() > 1) {
-                result.addHardViolation(String.format("Staff %s has multiple shifts on %s but split shifts not allowed",
-                        staff.getName() + " " + staff.getSurname(), entry.getKey()));
-            }
-        }
-    }
-
-    /**
-     * Minimum day off constraint
-     */
-    private void evaluateMinimumDayOff(Staff staff, List<Assignment> assignments,
-                                       Map<String, String> constraints, ConstraintEvaluationResult result) {
-
-        int minDayOffPerWeek = Integer.parseInt(constraints.getOrDefault("MinimumDayOff", "2"));
-
-        // Group assignments by week
-        Map<Integer, List<LocalDate>> workDaysByWeek = assignments.stream()
-                .collect(Collectors.groupingBy(
-                        assignment -> assignment.getDate().get(java.time.temporal.WeekFields.ISO.weekOfYear()),
-                        Collectors.mapping(Assignment::getDate, Collectors.toList())
-                ));
-
-        for (Map.Entry<Integer, List<LocalDate>> entry : workDaysByWeek.entrySet()) {
-            int workDaysInWeek = (int) entry.getValue().stream().distinct().count();
-            int dayOffInWeek = 7 - workDaysInWeek;
-
-            if (dayOffInWeek < minDayOffPerWeek) {
-                result.addHardViolation(String.format("Staff %s has insufficient day offs in week %d (%d < %d)",
-                        staff.getName() + " " + staff.getSurname(), entry.getKey(), dayOffInWeek, minDayOffPerWeek));
+                if (!hasAllQualifications) {
+                    result.addHardViolation(String.format(
+                            "Staff %s lacks required qualifications for task %s on %s",
+                            getStaffName(staff), task.getName(), assignment.getDate()));
+                }
             }
         }
     }
@@ -410,50 +260,102 @@ public class ConstraintEvaluator {
     /**
      * Day off rules compliance
      */
-    private void evaluateDayOffRules(Staff staff, List<Assignment> assignments, ConstraintEvaluationResult result) {
-        DayOffRule dayOffRule = staff.getDayOffRule();
-        if (dayOffRule == null) return;
+    private void checkDayOffRules(Staff staff, List<Assignment> assignments,
+                                  ConstraintEvaluationResult result) {
 
-        // TODO: Implement day off rules logic based on WORKING_DAYS, OFF_DAYS, and FIXED_OFF_DAYS
-        // This would check compliance with staff-specific day off patterns
+        DayOffRule rule = staff.getDayOffRule();
+        if (rule == null) return;
 
-        log.debug("Day off rules evaluation not fully implemented yet for staff: {}", staff.getName());
-    }
+        int maxWorkingDays = Optional.ofNullable(rule.getWorkingDays()).orElse(6);
 
-    /**
-     * Task coverage enforcement
-     */
-    private void evaluateTaskCoverage(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
-        // Check if all tasks are assigned
-        if (rosterPlan.getUnassignedTasks() != null && !rosterPlan.getUnassignedTasks().isEmpty()) {
-            for (Task unassignedTask : rosterPlan.getUnassignedTasks()) {
-                result.addHardViolation(String.format("Task %s is not assigned to any staff member",
-                        unassignedTask.getName()));
+        // Check consecutive working days
+        List<Assignment> sortedAssignments = assignments.stream()
+                .sorted(Comparator.comparing(Assignment::getDate))
+                .collect(Collectors.toList());
+
+        int consecutiveCount = 0;
+        LocalDate lastDate = null;
+
+        for (Assignment assignment : sortedAssignments) {
+            LocalDate currentDate = assignment.getDate();
+
+            if (lastDate == null || currentDate.equals(lastDate.plusDays(1))) {
+                consecutiveCount++;
+            } else {
+                consecutiveCount = 1;
             }
+
+            if (consecutiveCount > maxWorkingDays) {
+                result.addHardViolation(String.format(
+                        "Staff %s exceeds maximum consecutive working days (%d) ending on %s",
+                        getStaffName(staff), maxWorkingDays, currentDate));
+                break;
+            }
+
+            lastDate = currentDate;
+        }
+
+        // Check fixed off days
+        String fixedOffDays = rule.getFixedOffDays();
+        if (fixedOffDays != null && !fixedOffDays.isBlank()) {
+            Set<DayOfWeek> fixedDays = Arrays.stream(fixedOffDays.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .map(s -> DayOfWeek.valueOf(s.toUpperCase()))
+                    .collect(Collectors.toSet());
+
+            Map<DayOfWeek, Long> workingDayCount = assignments.stream()
+                    .collect(Collectors.groupingBy(a -> a.getDate().getDayOfWeek(), Collectors.counting()));
+
+            fixedDays.stream()
+                    .filter(day -> workingDayCount.getOrDefault(day, 0L) > 0)
+                    .forEach(day -> result.addSoftViolation(String.format(
+                            "Staff %s should be off every %s according to day off rule",
+                            getStaffName(staff), day)));
         }
     }
 
     /**
-     * Overlapping assignments
+     * Global constraint evaluation
      */
-    private void evaluateOverlappingAssignments(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
-        // Group assignments by staff
-        Map<Staff, List<Assignment>> assignmentsByStaff = rosterPlan.getAssignments().stream()
+    private void evaluateGlobalConstraints(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
+
+        // Task coverage
+        if (rosterPlan.getUnassignedTasks() != null && !rosterPlan.getUnassignedTasks().isEmpty()) {
+            rosterPlan.getUnassignedTasks().forEach(task ->
+                    result.addHardViolation(String.format("Task %s is not assigned", task.getName())));
+        }
+
+        // Overlapping assignments
+        checkOverlappingAssignments(rosterPlan, result);
+
+        // Department matching
+        checkDepartmentMatching(rosterPlan, result);
+
+        // Fairness evaluation (soft constraint)
+        evaluateFairness(rosterPlan, result);
+    }
+
+    /**
+     * Check for overlapping assignments
+     */
+    private void checkOverlappingAssignments(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
+        Map<Staff, List<Assignment>> staffAssignments = rosterPlan.getAssignments().stream()
                 .collect(Collectors.groupingBy(Assignment::getStaff));
 
-        for (Map.Entry<Staff, List<Assignment>> entry : assignmentsByStaff.entrySet()) {
+        for (Map.Entry<Staff, List<Assignment>> entry : staffAssignments.entrySet()) {
             Staff staff = entry.getKey();
-            List<Assignment> staffAssignments = entry.getValue();
+            List<Assignment> assignments = entry.getValue();
 
-            // Check for overlaps within staff assignments
-            for (int i = 0; i < staffAssignments.size(); i++) {
-                for (int j = i + 1; j < staffAssignments.size(); j++) {
-                    Assignment a1 = staffAssignments.get(i);
-                    Assignment a2 = staffAssignments.get(j);
+            for (int i = 0; i < assignments.size(); i++) {
+                for (int j = i + 1; j < assignments.size(); j++) {
+                    Assignment a1 = assignments.get(i);
+                    Assignment a2 = assignments.get(j);
 
                     if (a1.overlapsWith(a2)) {
-                        result.addHardViolation(String.format("Staff %s has overlapping assignments on %s",
-                                staff.getName() + " " + staff.getSurname(), a1.getDate()));
+                        result.addHardViolation(String.format(
+                                "Staff %s has overlapping assignments on %s",
+                                getStaffName(staff), a1.getDate()));
                     }
                 }
             }
@@ -461,26 +363,22 @@ public class ConstraintEvaluator {
     }
 
     /**
-     * Department match constraint
+     * Check department matching
      */
-    private void evaluateDepartmentMatch(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
-        for (Assignment assignment : rosterPlan.getAssignments()) {
-            if (assignment.hasTask()) {
-                Staff staff = assignment.getStaff();
-                Task task = assignment.getTask();
-
-                if (!staff.getDepartment().getId().equals(task.getDepartment().getId())) {
-                    result.addHardViolation(String.format("Staff %s from department %s assigned to task from department %s",
-                            staff.getName() + " " + staff.getSurname(),
-                            staff.getDepartment().getName(),
-                            task.getDepartment().getName()));
-                }
-            }
-        }
+    private void checkDepartmentMatching(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
+        rosterPlan.getAssignments().stream()
+                .filter(Assignment::hasTask)
+                .filter(assignment -> !assignment.getStaff().getDepartment().getId()
+                        .equals(assignment.getTask().getDepartment().getId()))
+                .forEach(assignment -> result.addHardViolation(String.format(
+                        "Staff %s from department %s assigned to task from department %s",
+                        getStaffName(assignment.getStaff()),
+                        assignment.getStaff().getDepartment().getName(),
+                        assignment.getTask().getDepartment().getName())));
     }
 
     /**
-     * Fairness evaluation (soft constraint)
+     * Fairness evaluation
      */
     private void evaluateFairness(RosterPlan rosterPlan, ConstraintEvaluationResult result) {
         Map<Staff, Double> workingHours = rosterPlan.getWorkingHoursSummary();
@@ -489,17 +387,113 @@ public class ConstraintEvaluator {
 
         double averageHours = workingHours.values().stream()
                 .mapToDouble(Double::doubleValue)
-                .average()
-                .orElse(0.0);
+                .average().orElse(0.0);
 
         double maxDeviation = 4.0; // Could be configurable
 
-        for (Map.Entry<Staff, Double> entry : workingHours.entrySet()) {
-            double deviation = Math.abs(entry.getValue() - averageHours);
-            if (deviation > maxDeviation) {
-                result.addSoftViolation(String.format("Staff %s has unfair workload deviation (%.1f hours from average)",
-                        entry.getKey().getName() + " " + entry.getKey().getSurname(), deviation));
+        workingHours.entrySet().stream()
+                .filter(entry -> Math.abs(entry.getValue() - averageHours) > maxDeviation)
+                .forEach(entry -> result.addSoftViolation(String.format(
+                        "Staff %s has unfair workload deviation (%.1f hours from average)",
+                        getStaffName(entry.getKey()),
+                        Math.abs(entry.getValue() - averageHours))));
+    }
+
+    // === UTILITY METHODS ===
+
+    private void initializeConstraintCacheIfNeeded() {
+        if (!cacheInitialized) {
+            synchronized (this) {
+                if (!cacheInitialized) {
+                    try {
+                        constraintCache.clear();
+                        constraintService.findAll().forEach(constraint ->
+                                constraintCache.put(constraint.getName(), constraint.getDefaultValue()));
+                        cacheInitialized = true;
+                        log.debug("Constraint cache initialized with {} constraints", constraintCache.size());
+                    } catch (Exception e) {
+                        log.error("Failed to initialize constraint cache", e);
+                    }
+                }
             }
         }
+    }
+
+    private Map<String, String> getEffectiveConstraints(Staff staff) {
+        Map<String, String> effective = new HashMap<>(constraintCache);
+
+        // Apply staff-specific overrides
+        if (staff.getConstraintOverrides() != null) {
+            staff.getConstraintOverrides().stream()
+                    .filter(override -> override.getActive() && override.getConstraint() != null)
+                    .forEach(override -> effective.put(
+                            override.getConstraint().getName(),
+                            override.getOverrideValue()));
+        }
+
+        return effective;
+    }
+
+    private boolean isPatternMatch(Assignment assignment, String expectedPattern) {
+        if ("DAYOFF".equals(expectedPattern) || "OFF".equals(expectedPattern)) {
+            return false; // Assignment exists, so not a day off
+        }
+
+        Shift shift = assignment.getShift();
+        if (shift == null) return false;
+
+        String shiftName = shift.getName().toUpperCase();
+        String shiftId = shift.getId().toString();
+
+        return shiftName.contains(expectedPattern) ||
+                shiftId.equals(expectedPattern) ||
+                expectedPattern.contains(shiftName);
+    }
+
+    private long calculateHoursBetweenShifts(Assignment current, Assignment next) {
+        LocalTime currentEnd = current.getShift().getEndTime();
+        LocalTime nextStart = next.getShift().getStartTime();
+
+        if (current.getDate().equals(next.getDate())) {
+            return ChronoUnit.HOURS.between(currentEnd, nextStart);
+        } else if (current.getDate().plusDays(1).equals(next.getDate())) {
+            long hoursToMidnight = ChronoUnit.HOURS.between(currentEnd, LocalTime.MIDNIGHT);
+            long hoursFromMidnight = ChronoUnit.HOURS.between(LocalTime.MIDNIGHT, nextStart);
+            return hoursToMidnight + hoursFromMidnight;
+        }
+
+        return 24; // Sufficient rest if more than one day between assignments
+    }
+
+    private String getStaffName(Staff staff) {
+        return staff.getName() + " " + staff.getSurname();
+    }
+
+    private double parseDoubleConstraint(Map<String, String> constraints, String key, double defaultValue) {
+        try {
+            return Double.parseDouble(constraints.getOrDefault(key, String.valueOf(defaultValue)));
+        } catch (NumberFormatException e) {
+            log.warn("Invalid constraint value for {}, using default: {}", key, defaultValue);
+            return defaultValue;
+        }
+    }
+
+    private int parseIntConstraint(Map<String, String> constraints, String key, int defaultValue) {
+        try {
+            return Integer.parseInt(constraints.getOrDefault(key, String.valueOf(defaultValue)));
+        } catch (NumberFormatException e) {
+            log.warn("Invalid constraint value for {}, using default: {}", key, defaultValue);
+            return defaultValue;
+        }
+    }
+
+    private boolean parseBooleanConstraint(Map<String, String> constraints, String key, boolean defaultValue) {
+        return Boolean.parseBoolean(constraints.getOrDefault(key, String.valueOf(defaultValue)));
+    }
+
+    public void clearConstraintCache() {
+        constraintCache.clear();
+        cacheInitialized = false;
+        log.debug("Constraint cache cleared");
     }
 }
